# NeMo-Ray

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt
agent/: pyproject.toml
agent/nemoray_modelling/: __init__.py  agent.py  emergency.py  events.py  lidar.py  places.py  server.py  starlink.py  tle.py  tools.py
agent/nemoray_modelling/data/: starlink_tle.txt
brev/: README.md  down.sh  serve-nemotron.sh  setup.sh  up.sh
data/: README.md  buildings.pkl  greater-london-latest.osm.pbf
data/emergency/: hospitals-england.csv
data/retrieved/: SITEFINDER_London_EEproxy.csv
docs/: INTEGRATION.md  TWIN_HANDOFF_added_masts.md  TWIN_INTEGRATION.md
nemoray/: .env.example  .env.template  .gitignore  README.md  eslint.config.mjs  jest.config.ts  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
nemoray/.storybook/: main.ts  preview.ts
nemoray/__mocks__/: react-map-gl.ts
nemoray/__tests__/: camera.test.ts  next-config.test.ts  osgb.test.ts  sitefinder.test.ts
nemoray/app/: globals.css  layout.tsx  providers.tsx
nemoray/data/: fire-stations-london.csv  hospitals-england.csv  police-stations-london.csv
nemoray/docs/: DESIGN-SYSTEM.md  INVARIANTS.md
nemoray/hooks/: useAgentCamera.ts  useCesiumCamera.ts  useCoverageTelemetry.ts  useKeyboardShortcuts.ts  useNemotronTelemetry.ts  useScenarioTimeline.ts  useSitefinderSelection.ts  useStreamingAgent.ts  (+2 more)
scripts/: serve_nemotron.sh
spark/: README.md  down.sh  run-pipeline.sh  serve-agent.sh  serve-hud.sh  serve-nemotron.sh  serve-twin.sh  setup.sh  up.sh
src/: __init__.py  config.py  cuopt.py  emergency.py  export.py  geo.py  gpu.py  history.py  masts.py  mosaic.py  optimize.py  osm.py  pipeline.py  resimulate.py  rt.py  scene_builder.py  serve.py  verify.py
tests/: agent_e2e.py  agent_thinking_ab.py  integration_nim.py  integration_twin_agent.py  knowledge_graph_smoke.py  scenarios.py  test_cuopt_fallback.py  test_geo.py
(+229 files in other folders)
