[project]
name = "nemoray-agent"
version = "0.2.0"
description = "NeMo-Ray Nemotron resilience agent (drives the coverage twin over HTTP)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.7",
    # check_starlink — Starlink TLE propagation / visibility (CPU, no CUDA).
    "skyfield>=1.49",
    # fire-station EPSG:27700 -> WGS84 transform in emergency.py.
    "pyproj>=3.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nemoray_modelling"]
